--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ div .container {
 
 #skills-section {
   position: absolute;
-  top: 200vh;
+  top: 100vh;
   padding: 10px 0;
   height: 100vh;
   width: 100vw;
@@ -78,12 +78,49 @@ div .container {
 }
 
 div .services {
-  width: 400px;
+  /* width: 400px; */
   height: 400px;
 }
 
 .sevices-word {
   display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 3rem;
+  /* font-weight: 900; */
   color: #00050a;
+  padding: 3rem 3rem;
+}
+
+div .container {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  /* background-color: red; */
+}
+
+.service {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 400px;
+  border: 2px solid #00050a9f;
+  border-radius: 8px;
+}
+
+h3 {
+  color: #00050a;
+  font-weight: 400;
+}
+
+#contact {
+  position: absolute;
+  top: 200vh;
+  height: 100vh;
+  width: 100vw;
+  background: #00050a;
+  color: #eeeeee;
 }
