--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ div .container {
   position: absolute;
   top: 100vh;
   padding: 10px 0;
-  height: 100vh;
+  height: 200vh;
   width: 100vw;
   background: #eeeeee;
 }
@@ -89,7 +89,7 @@ div .services {
   font-size: 3rem;
   /* font-weight: 900; */
   color: #00050a;
-  padding: 3rem 3rem;
+  padding: 3rem 3rem 0 3rem;
 }
 
 div .container {
@@ -106,7 +106,7 @@ div .container {
   justify-content: center;
   align-items: center;
   width: 300px;
-  height: 400px;
+  height: 100px;
   border: 2px solid #00050a9f;
   border-radius: 8px;
 }
@@ -118,7 +118,7 @@ h3 {
 
 #contact {
   position: absolute;
-  top: 200vh;
+  top: 300vh;
   height: 100vh;
   width: 100vw;
   background: #00050a;
