--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ div .services {
   font-size: 3rem;
   /* font-weight: 900; */
   color: #00050a;
+  background: #2800ad;
   padding: 3rem 3rem 0 3rem;
 }
 
@@ -103,17 +104,44 @@ div .container {
 
 .service {
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 30px;
+  margin-top: 80px;
   align-items: center;
   width: 300px;
-  height: 100px;
+  height: 400px;
   border: 2px solid #00050a9f;
   border-radius: 8px;
+}
+
+.paragraph {
+  color: #00050aab;
+  position: absolute;
+  width: 230px;
+  /* padding-right: 30px; */
+  padding-top: 40px;
 }
 
 h3 {
   color: #00050a;
   font-weight: 400;
+  position: absolute;
+  top: 20vh;
+}
+
+.testimonials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background: blue; */
+  color: #00050a;
+  position: absolute;
+  top: 100vh;
+  width: 100vw;
+  font-size: 3rem;
+}
+
+.testimonial {
 }
 
 #contact {
