--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ div .services {
   /* font-weight: 900; */
   color: #00050a;
   /* background: #2800ad; */
-  padding: 3rem 3rem 0 3rem;
+  /* padding: 3rem 3rem 0 3rem; */
 }
 
 div .container {
@@ -106,10 +106,10 @@ div .container {
   display: flex;
   justify-content: left;
   padding-left: 30px;
-  margin-top: 80px;
+  /* margin-top: 80px; */
   align-items: center;
   width: 300px;
-  height: 400px;
+  height: 100px;
   border: 2px solid #00050a9f;
   border-radius: 8px;
 }
@@ -142,6 +142,9 @@ h3 {
 }
 
 .testimonial {
+  width: 100vw;
+  height: 20px;
+  background: red;
 }
 
 #contact {
@@ -169,6 +172,7 @@ h4 {
 .email {
   font-size: 1.6rem;
   padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 .links {
