--- a/style.css
+++ b/style.css
@@ -71,23 +71,37 @@ div .container {
   /* background: red; */
 }
 
-#skills-section {
+#aboutme-section {
   position: absolute;
   top: 100vh;
-  padding: 10px 0;
-  height: 200vh;
+  height: 100vh;
   width: 100vw;
-  background: #eeeeee;
+  background: pink;
 }
 
-.sevices-word {
-  display: flex;
+#services-section {
+  position: absolute;
+  top: 200vh;
+  height: 100vh;
+  width: 100vw;
+}
 
-  justify-content: center;
-  align-items: center;
-  font-size: 3rem;
-  color: #00050a;
-  padding-top: 30px;
+#skills-section {
+  position: absolute;
+  top: 300vh;
+  padding: 10px 0;
+  height: 100vh;
+  width: 100vw;
+  background: red;
+}
+
+#contact {
+  position: absolute;
+  top: 400vh;
+  height: 100vh;
+  width: 100vw;
+  background: #00050a;
+  color: #eeeeee;
 }
 
 hr {
@@ -95,23 +109,6 @@ hr {
   left: 0;
   width: 100vw;
   top: -5vh;
-}
-
-.separator {
-  position: absolute;
-  bottom: 30vh;
-  right: 50vw;
-  width: 2px;
-  height: 350px;
-  background-color: #00050a;
-}
-
-.fa-brands {
-  font-size: 24px;
-  /* background: red; */
-  margin: 0;
-  padding: 0;
-  line-height: 0.1;
 }
 
 h3 {
@@ -131,42 +128,6 @@ h3 {
   padding-left: 20px;
   padding-right: 20px;
   margin-right: 300px;
-}
-
-.skills-div {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background: blue; */
-  color: #00050a;
-  position: absolute;
-  top: 100vh;
-  left: 720px;
-  /* width: 100vw; */
-  font-size: 3rem;
-}
-
-.skillses {
-  position: absolute;
-  left: -30px;
-  /* background: red; */
-  width: 300px;
-}
-
-.skills {
-  position: absolute;
-  gap: 35px;
-  top: 100px;
-  /* background: red; */
-}
-
-.skills h4 {
-  font-size: 1rem;
-  font-weight: 800;
-  padding: 2px 2px;
-  margin-bottom: 20px;
-  text-align: right;
 }
 
 .html-div {
@@ -317,24 +278,6 @@ h3 {
   width: 18vw;
   height: 7px;
   z-index: 99;
-}
-
-.testimonial {
-  display: flex;
-  justify-content: center;
-  font-size: 3rem;
-  width: 100vw;
-  height: 20px;
-  /* background: red; */
-}
-
-#contact {
-  position: absolute;
-  top: 300vh;
-  height: 100vh;
-  width: 100vw;
-  background: #00050a;
-  color: #eeeeee;
 }
 
 .contact-container {
