--- a/style.css
+++ b/style.css
@@ -77,11 +77,12 @@ div .container {
   top: 100vh;
   height: 100vh;
   width: 100vw;
-  background: pink;
+  background-color: #e8e3e8;
 }
 
 .about-me-div {
-  background-color: red;
+  position: absolute;
+  background-color: #e8e3e8;
   height: 100%;
   width: 55%;
 }
@@ -95,23 +96,83 @@ div .container {
 }
 
 .about-me-head {
+  position: absolute;
   font-size: 1.6rem;
   color: #00050a;
   font-weight: 600;
   margin-top: 150px;
-  padding-left: 70px;
+  margin-left: 60%;
 }
+
 .about-header {
   display: flex;
 }
 
 .about-separator {
   position: absolute;
-  width: 0.3%;
-  height: 80%;
+  width: 0.2%;
+  height: 70%;
+  right: 45%;
   background: #00050a;
   border-radius: 30px;
   top: 60px;
+}
+
+.circles-container {
+  display: flex;
+  gap: 10px;
+  width: 15%;
+  height: 60px;
+  /* background: red; */
+  position: absolute;
+  top: 412px;
+  left: 60%;
+  align-items: center;
+  justify-content: baseline;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #00050a;
+}
+
+.separator-bottom {
+  position: absolute;
+  top: 90%;
+  left: 5%;
+  width: 90%;
+  height: 0.4%;
+  background: #00050a;
+  z-index: 99;
+}
+.marquee {
+  position: relative;
+  overflow: hidden;
+  color: #00050a;
+  padding: 30px 0;
+  height: fit-content;
+  font-weight: 600;
+  font-size: 6.7rem;
+  top: 87%;
+  z-index: 99;
+}
+
+.marquee-inner {
+  display: flex;
+  width: fit-content;
+  flex: auto;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.marquee-part {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  padding: 0 4px;
+  background: blue;
 }
 
 #services-section {
@@ -119,6 +180,7 @@ div .container {
   top: 200vh;
   height: 100vh;
   width: 100vw;
+  background-color: #e8e3e8;
 }
 
 #skills-section {
