--- a/style.css
+++ b/style.css
@@ -165,7 +165,8 @@ div .container {
   flex: auto;
   flex-direction: row;
   gap: 20px;
-  background: blue;
+
+  /* background: blue; */
 }
 
 .marquee-part {
@@ -176,12 +177,94 @@ div .container {
   /* background: blue; */
 }
 
+/* SERVICES SECTION BABY!!!!! */
+
 #services-section {
   position: absolute;
   top: 200vh;
   height: 100vh;
   width: 100vw;
   background-color: #e8e3e8;
+  color: #00050a;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.services-div {
+  /* background: red; */
+  position: relative;
+  top: 130px;
+  display: flex;
+}
+
+.what-i-do-heading {
+  width: 30%;
+}
+
+.head {
+  font-size: 1.6rem;
+  padding-left: 20%;
+}
+
+.vertical {
+  position: absolute;
+  width: 0.2%;
+  left: 25%;
+  height: 90%;
+  background: #00050a;
+  /* z-index: 99; */
+  border-radius: 30px;
+}
+
+.ui-rule {
+  position: absolute;
+  top: 0;
+  left: 60%;
+  background: #00050a;
+  width: 0.2%;
+  height: 40%;
+}
+.services {
+  display: flex;
+  gap: 10px;
+  width: 80%;
+}
+
+.prod-rule {
+  position: absolute;
+  top: 50%;
+  left: 60%;
+  background: #00050a;
+  width: 0.2%;
+  height: 40%;
+}
+
+.horizontal-rule {
+  position: absolute;
+  top: 45%;
+  width: 67%;
+  left: 29%;
+  height: 0.4%;
+
+  background: #00050a;
+  z-index: 99;
+  border-radius: 30px;
+}
+
+.service {
+  height: 200px;
+  width: 87%;
+  margin-bottom: 30px;
+}
+
+.title {
+  padding-left: 24px;
+  font-size: 2.7rem;
+}
+
+.service-text {
+  padding-left: 24px;
+  padding-right: 20px;
+  margin-top: 24px;
 }
 
 #skills-section {
