--- a/style.css
+++ b/style.css
@@ -177,6 +177,14 @@ div .container {
   /* background: blue; */
 }
 
+.marquee-seperator {
+  width: 90%;
+  height: 0.6%;
+  background: #00050a;
+  position: absolute;
+  left: 5%;
+}
+
 /* SERVICES SECTION BABY!!!!! */
 
 #services-section {
@@ -187,6 +195,7 @@ div .container {
   background-color: #e8e3e8;
   color: #00050a;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 .services-div {
@@ -241,7 +250,7 @@ div .container {
 .horizontal-rule {
   position: absolute;
   top: 45%;
-  width: 67%;
+  width: 66.3%;
   left: 29%;
   height: 0.4%;
 
@@ -273,7 +282,37 @@ div .container {
   padding: 10px 0;
   height: 100vh;
   width: 100vw;
+  background: #e8e3e8;
+  overflow: hidden;
+}
+
+.skills-marquee {
+  position: absolute;
+  /* background: blue; */
+  top: -10%;
+  /* z-index: 99; */
+  margin-top: 20px;
+}
+
+.skill-wrapper {
+  position: relative;
+  display: flex;
+  background: #2800ad;
+  width: 100%;
+  height: 80%;
+  margin-top: 120px;
+}
+
+.technical-side {
+  width: 45%;
+  height: 100%;
   background: red;
+}
+
+.soft-side {
+  width: 70%;
+  height: 100%;
+  background: pink;
 }
 
 #contact {
@@ -336,5 +375,5 @@ h4 {
 .github:hover,
 .behance:hover,
 .linkedin:hover {
-  color: rgb(217, 31, 223);
+  color: #3d06f0;
 }
