--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ div .container {
 .skill-wrapper {
   position: relative;
   display: flex;
-  background: #2800ad;
+  /* background: #2800ad; */
   width: 100%;
   height: 80%;
   margin-top: 120px;
@@ -306,7 +306,31 @@ div .container {
 .technical-side {
   width: 45%;
   height: 100%;
-  background: red;
+  /* background: red; */
+}
+
+.tech-head {
+  color: #00050a;
+  margin-left: 100px;
+  margin-top: 100px;
+}
+
+.soft-head {
+  color: #00050a;
+  margin-left: 100px;
+  margin-top: 100px;
+}
+
+.skills {
+  margin-left: 100px;
+  margin-top: 50px;
+  /* background-color: blue; */
+  color: #00050a;
+}
+.skill {
+  list-style: none;
+  font-size: 2.3rem;
+  line-height: 1.5;
 }
 
 .soft-side {
