--- a/style.css
+++ b/style.css
@@ -328,9 +328,24 @@ div .container {
   color: #00050a;
 }
 .skill {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
   list-style: none;
   font-size: 2.3rem;
   line-height: 1.5;
+  color: #00050a;
+}
+
+.skill-meter {
+  position: absolute;
+  left: 7%;
+  margin-left: 50px;
+  width: 25%;
+  border-radius: 9px;
+  height: 1%;
+  background: #00050a;
 }
 
 .soft-side {
