--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ div .container {
 }
 
 .circle {
+  visibility: hidden;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -321,25 +322,6 @@ div .container {
   margin-top: 100px;
 }
 
-/* soft particle system */
-/* 
-.particles-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.particle {
-  position: absolute;
-  background-color: #3d06f0;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-} */
-
 .skills {
   margin-left: 100px;
   margin-top: 50px;
@@ -359,13 +341,12 @@ div .container {
 
 .skill-meter {
   position: absolute;
-  left: 7%;
-
-  margin-left: 50px;
-  width: 25%;
-  border-radius: 9px;
-  height: 1%;
-  background: #00050a;
+  /* margin-left: 50px; */
+  width: 10%;
+  border-radius: 50%;
+  height: 10%;
+  border: 1px solid #00050a;
+  background: transparent;
 }
 
 .html {
@@ -480,8 +461,13 @@ h4 {
 /* MEDIA QUERY */
 
 @media screen and (max-width: 428px) {
-  #aboutme-section {
+  #landing-page {
     /* height: 90%; */
+    /* text-align: center; */
+  }
+
+  .circle {
+    visibility: visible;
   }
 
   .about-me-div {
@@ -512,7 +498,7 @@ h4 {
     align-items: center;
     justify-content: center;
     width: 20%;
-    font-size: 1rem;
+    font-size: 14px;
   }
 
   .marquee.work {
@@ -545,11 +531,9 @@ h4 {
   }
   .what-i-do-heading {
     position: absolute;
-    width: 30%;
     top: -130px;
-
-    right: 40vw;
-    /* background-color: blue; */
+    font-size: 14px;
+    right: 35vw;
     z-index: 99;
   }
 
@@ -573,11 +557,11 @@ h4 {
   }
 
   .title {
-    font-size: 2rem;
+    font-size: 1.7rem;
   }
 
   .service-text {
-    font-size: 1rem;
+    font-size: 14px;
   }
 
   .head {
@@ -592,7 +576,7 @@ h4 {
   .circles-container {
     /* background: #3d06f0; */
     /* gap: 20px; */
-    left: 200px;
+    left: 43%;
     top: 55%;
   }
 
@@ -605,7 +589,7 @@ h4 {
   }
 
   #skills-section {
-    background: yellow;
+    /* background: yellow; */
     top: 350vh;
   }
 
@@ -639,7 +623,7 @@ h4 {
 
   .contacts-circle {
     top: 85%;
-    left: 40%;
+    left: 45%;
   }
 
   .code-snip-div {
