--- a/style.css
+++ b/style.css
@@ -338,6 +338,16 @@ div .container {
 
 .skill-meter {
   position: relative;
+  width: 50px;
+  height: 50px;
+  background: cornflowerblue;
+}
+
+.outer {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid red;
 }
 
 /* .skill-meter {
