--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ div .container {
   position: absolute;
   top: 300vh;
   padding: 10px 0;
-  height: 100vh;
+  height: 105vh;
   width: 100vw;
   background: #e8e3e8;
   overflow: hidden;
@@ -301,12 +301,100 @@ div .container {
   width: 100%;
   height: 80%;
   margin-top: 120px;
+  padding: 10px 20px;
+  /* background: blue; */
 }
 
 .technical-side {
   width: 45%;
   height: 100%;
-  /* background: red; */
+  background: #e8e3e8;
+}
+
+.technical-side .skill-box {
+  width: 100%;
+  background: rgb(212, 212, 212);
+  border-radius: 5px;
+  margin: 25px 0px;
+  border-radius: 4px;
+  padding: 15px 20px;
+}
+
+.skill-box .skill-bar {
+  height: 4px;
+  width: 100%;
+  border-radius: 4px;
+  margin-top: 16px;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.skill-bar .skill-per {
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 90%;
+  background: #4070f4;
+  border-radius: 2px;
+  animation: progress 1s ease-in-out forwards;
+  opacity: 0;
+}
+
+@keyframes progress {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    /* width: 90%; */
+    opacity: 1;
+  }
+}
+
+.skill-per.css {
+  /* background: yellow; */
+  width: 80%;
+}
+
+.skill-per.js {
+  /* background: yellow; */
+  width: 75%;
+}
+
+.skill-per.figma {
+  /* background: yellow; */
+  width: 80%;
+}
+
+.skill-per .tooltip {
+  position: absolute;
+  right: -14px;
+  top: -28px;
+  background: #4070f4;
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+  padding: 2px 4px;
+  border-radius: 2px;
+  z-index: 1;
+}
+
+.skill-box .skill-title {
+  display: block;
+  font-size: 14px;
+  font-weight: 600;
+  color: #333;
+}
+
+.tooltip::before {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  background-color: #4070f4;
+  z-index: -1;
+  transform: translateY(-50%) rotate(45deg);
 }
 
 .tech-head {
@@ -332,7 +420,7 @@ div .container {
 #contact {
   position: absolute;
   display: flex;
-  top: 400vh;
+  top: 405vh;
   height: 111vh;
   width: 100vw;
   background: #00050a;
