--- a/style.css
+++ b/style.css
@@ -312,10 +312,11 @@ div .container {
 }
 
 .technical-side .skill-box {
-  width: 100%;
+  width: 90%;
   background: rgb(212, 212, 212);
   border-radius: 5px;
   margin: 25px 0px;
+  margin-left: 40px;
   border-radius: 4px;
   padding: 15px 20px;
 }
@@ -404,7 +405,7 @@ div .container {
 
 .tech-head {
   color: #00050a;
-  margin-left: 100px;
+  margin-left: 40px;
   margin-top: 100px;
 }
 
@@ -412,6 +413,17 @@ div .container {
   color: #00050a;
   margin-left: 100px;
   margin-top: 100px;
+  margin-bottom: 24px;
+}
+
+.soft-wrapper {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 100px;
+  padding-top: 0px;
+  height: 340px;
+  /* background: red; */
 }
 
 .soft-side {
@@ -420,6 +432,33 @@ div .container {
   width: 70%;
   height: 100%;
   /* background: pink; */
+}
+
+.soft {
+  /* padding-left: 24px; */
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  /* background: red; */
+  width: 150px;
+  height: 100%;
+  margin-bottom: 5px;
+  /* margin-left: 100px; */
+  padding: 20px 40px;
+  border-radius: 5px;
+  border: 1px solid #00050a;
+  transition: flex-grow 0.9s ease-in-out;
+}
+
+.soft:hover {
+  flex-grow: 1;
+  cursor: pointer;
+}
+
+.soft span {
+  color: #00050a;
+  font-size: 14px;
 }
 
 #contact {
